# http-native

./: .gitignore  CONTRIBUTING.md  Cargo.toml  package.json  readme.md
.github/examples/: README.md
.github/examples/reload/: server.js
.github/tests/: test-dev.js  test-hot-app.js
.github/workflows/: benchmark.yml  main.yml  publish.yml
bench/: ci.js  run.js  target.js  test-http-bun.js  test-http.js  test.js
examples/: README.md
examples/01-hello-world/: server.js
examples/02-route-params/: server.js
examples/03-http-methods/: server.js
examples/04-middleware/: server.js
examples/05-error-handling/: server.js
examples/06-cors/: server.js
examples/07-route-groups/: server.js
examples/08-query-params/: server.js
examples/09-request-body/: server.js
examples/10-native-cache/: server.js
examples/11-sessions/: server.js
examples/12-streaming/: server.js
examples/13-response-types/: server.js
examples/14-validation/: server.js
examples/15-optimizations/: server.js
opt/: runtime.js
rsrc/src/: lib.rs  manifest.rs  router.rs
rust-native/: Cargo.toml
rust-native/src/: analyzer.rs  lib.rs  manifest.rs  router.rs
scripts/: build-native.mjs  ensure-native.mjs  setup-native.mjs
scripts/native/: download.mjs  shared.mjs
src/: bridge.js  cli.js  hot.js  http-server.config.js  index.d.ts  index.js  native.js  validate.js
src/dev/: comments.js  hot-reload.js  index.d.ts  index.js
src/opt/: entry.js  notify.js  runtime.js
test/: app.ts  test.js
