[package]
name = "http_native_napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
bytes = "1.10"
http-body-util = "0.1"
hyper = { version = "1.7", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
json5 = "0.4"
memchr = "2.7"
napi = { version = "3", default-features = false, features = ["async", "napi8", "tokio_rt"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = { version = "0.5", features = ["all"] }
tokio = { version = "1.48", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
url = "2.5"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
